tests/fixtures/invalid/list_bitxor_str.py
# Cannot bitwise XOR List[int] and Str
x: list[int] = [1, 2, 3] ^ "hello"
